plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.bmuschko.docker-remote-api' version '7.1.0'
}

group = 'space.monntterro'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    telegrambots = '9.2.0'
}

dependencies {
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Telegram API
    implementation "org.telegram:telegrambots-springboot-longpolling-starter:${telegrambots}"
    implementation 'org.apache.commons:commons-lang3:3.18.0' // vulnerability from lib above
    implementation "org.telegram:telegrambots-client:${telegrambots}"

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

}

tasks.named('test') {
    useJUnitPlatform()
}
